<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/easy_btn"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/EasyGame"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"></Button>

        <Button
            android:id="@+id/medium_btn"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/MediumGame"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"></Button>

        <Button
            android:id="@+id/hard_btn"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/HardGame"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Switch
            android:id="@+id/music_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/music"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>