<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="469dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|fill_vertical"
            android:text="@string/difficulty" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle|beginning|end">

                <TableLayout
                    android:id="@+id/RankingList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:background="#020000"
                    android:gravity="center"
                    android:stretchColumns="0,1,2,3">

                    <TableRow
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/white">

                        <TextView
                            android:id="@+id/ranking"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical|fill_vertical"
                            android:text="@string/ranking"
                            android:textColor="#6B2BDC"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/head"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/position"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/position" />

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="2"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/username" />

                        <TextView
                            android:id="@+id/score"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/score" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="4"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/time" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>